WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255771
[WGSL] Overload resolution shouldn't eagerly promote variables
https://bugs.webkit.org/show_bug.cgi?id=255771
Summary
[WGSL] Overload resolution shouldn't eagerly promote variables
Tadeu Zagallo
Reported
2023-04-21 02:33:57 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-21 02:34:21 PDT
<
rdar://problem/108361197
>
Tadeu Zagallo
Comment 2
2023-04-21 03:04:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13017
EWS
Comment 3
2023-04-25 01:35:25 PDT
Committed
263355@main
(5186c242378c): <
https://commits.webkit.org/263355@main
> Reviewed commits have been landed. Closing PR #13017 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug